<resources>
    <string name="app_name">my eDiary</string>
    <string name="edit_message">Enter a message</string>
    <string name="title_activity_screen2">Screen2</string>
    <string name="title_activity_screen3">Screen3</string>
    <string name="jingle2">\n\n\n\n private and secure through eDiary – the world\'s preferred online diary service.</string>
    <string name="jingle1">\n Keep  all  of  your  ideas,  interests,  thoughts,  etc.</string>
    <string name="new_user">New User?</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="todo">TODO</string>
    <string name="blank"></string>
    <string name="title_activity_login_page">login_page</string>
    <string name="signup">Create an account:</string>
    <string name="email">Email</string>
    <string name="pass1">Password:</string>
    <string name="login1">Login!</string>
    <string name="title_activity_welcomepage">welcomepage</string>
    <string name="welcome_message">Thank you for choosing eDiary! Feel free to start adding pictures, videos, notes, entries, playlists, etc. in this virtual portal to your mind.</string>
    <string name="Create_Entry">Create Entry</string>
    <string name="Create_Notes">Create Notes</string>
    <string name="Create_PhotoAlbum">Create Photo Album</string>
    <string name="Create_Playlist">Create Playlist</string>
    <string name="title_activity_entry_page">entryPage</string>
    <string name="EntryPage">Create an Entry</string>
    <string name="name">Name</string>
    <string name="entry">Entry</string>
    <string name="note">Note</string>
    <string name="prev_e">Previous Entry: </string>
    <string name="title_activity_login_page2">login_page2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="new_password">New Password</string>
    <string name="cnfm_password">Confirm Password</string>
    <string name="new_username">New Username</string>
    <string name="title_activity_notes_page">notesPage</string>
    <string name="prev_n">Previous Note: </string>
    <string name="title_activity_pictures_page">picturesPage</string>
    <string name="upload_pic">Upload Picture</string>
    <string name="upload_album">Upload Album</string>
    <string name="prev_p">Previous Picture: </string>
    <string name="prev_pl">Previous Playlist: </string>
    <string name="title_activity_playlist_page">playlistPage</string>
    <string name="hintpl">Link to Playlist</string>
</resources>
