<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="409sp"
        android:layout_height="132sp"
        android:background="#F0FCFC"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#008B8B"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="409sp"
        android:layout_height="410sp"
        android:layout_marginTop="133sp"
        android:background="#B0C4DE"
        android:lineSpacingMultiplier="1.3"
        android:text="@string/jingle2"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="231sp"
        android:layout_height="152sp"
        android:layout_marginLeft="179dp"
        android:layout_marginTop="133sp"
        android:background="#B0C4DE"
        android:lineSpacingMultiplier="1.3"
        android:text="@string/jingle1"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="179dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="410sp"
        android:layout_height="190sp"
        android:layout_marginTop="541sp"
        android:background="#F7D6FA"
        android:gravity="bottom"
        android:text="@string/new_user"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="338sp"
        android:layout_height="51sp"
        android:layout_marginLeft="27sp"
        android:layout_marginTop="543sp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/blank"
        android:inputType="textEmailAddress"
        android:text="@string/username"
        android:textColor="#9400D3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" tools:targetApi="o"
        android:layout_marginStart="27sp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="336sp"
        android:layout_height="51sp"
        android:layout_marginLeft="27sp"
        android:layout_marginTop="588sp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/blank"
        android:inputType="text"
        android:text="@string/password"
        android:textColor="#9400D3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" tools:targetApi="o"
        android:layout_marginStart="27sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="186sp"
        android:layout_height="52sp"
        android:layout_marginLeft="170sp"
        android:layout_marginTop="639sp"
        android:background="#9400D3"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="170sp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="128sp"
        android:layout_height="120sp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="410dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@mipmap/musical_note"
        android:layout_marginStart="35dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="126sp"
        android:layout_height="118sp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="408dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@mipmap/pencil_black1"
        android:layout_marginStart="45dp" />
    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="171dp"
        android:layout_height="146dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:srcCompat="@mipmap/lock_cloud" />

</android.support.constraint.ConstraintLayout>