<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="409sp"
        android:layout_height="132sp"
        android:background="#F0FCFC"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#008B8B"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="409sp"
        android:layout_height="410sp"
        android:layout_marginTop="133sp"
        android:background="#B0C4DE"
        android:lineSpacingMultiplier="1.3"
        android:text=""
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="410sp"
        android:layout_height="190sp"
        android:layout_marginTop="541sp"
        android:background="#F7D6FA"
        android:gravity="bottom"
        android:text="@string/new_user"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="338sp"
        android:layout_height="51sp"
        android:layout_marginLeft="27sp"
        android:layout_marginStart="27sp"
        android:layout_marginTop="543sp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/blank"
        android:inputType="textEmailAddress"
        android:text="@string/username"
        android:textColor="#9400D3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" tools:targetApi="o" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="336sp"
        android:layout_height="51sp"
        android:layout_marginLeft="27sp"
        android:layout_marginStart="27sp"
        android:layout_marginTop="588sp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/blank"
        android:inputType="text"
        android:text="@string/password"
        android:textColor="#9400D3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" tools:targetApi="o" />

    <Button
        android:id="@+id/button2"
        android:layout_width="186sp"
        android:layout_height="52sp"
        android:layout_marginLeft="170sp"
        android:layout_marginStart="170sp"
        android:layout_marginTop="639sp"
        android:background="#9400D3"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="326dp"
        android:layout_height="382dp"
        android:layout_marginLeft="37dp"
        android:layout_marginStart="37sp"
        android:layout_marginTop="16dp"
        android:background="#FFF"
        android:text="@string/signup"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="279dp"
        android:layout_height="47dp"
        android:layout_marginLeft="57dp"
        android:layout_marginStart="57sp"
        android:layout_marginTop="80dp"
        android:autofillHints=""
        android:hint="@string/email"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/blank"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3" tools:targetApi="o"/>

    <EditText
        android:id="@+id/editText4"
        android:layout_width="276dp"
        android:layout_height="48dp"
        android:layout_marginLeft="57dp"
        android:layout_marginStart="57sp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:hint="@string/cnfm_password"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/blank"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5" tools:targetApi="o"/>

    <EditText
        android:id="@+id/editText5"
        android:layout_width="277dp"
        android:layout_height="46dp"
        android:layout_marginLeft="57dp"
        android:layout_marginStart="57sp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/blank"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" tools:targetApi="o"/>

    <Button
        android:id="@+id/button"
        android:layout_width="131dp"
        android:layout_height="51dp"
        android:layout_marginLeft="187sp"
        android:layout_marginStart="187sp"
        android:layout_marginTop="435dp"
        android:text="@string/login1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>